# MihomoConfigGenerator

./: .gitignore  README.md  pyproject.toml  qmai.yaml  upgrade
.github/workflows/: build.yml  release.yml  speedtest.yml
example/: generated.yml  subscribe.yml  template.yml
generator/: mihomo.py  script.py  template.yaml
tests/: test_script.py
