[tool.poetry]
name = "mihomo_config_generator"
version = "0.1.0"
description = ""
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
readme = "README.md"
packages = [{ include = "generator" }]
include = [
    { path = "generator/template.yml" },
]

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
